--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,61 @@
 <resources>
-    <string name="app_name">SIP-BDR</string>
+    <string name="app_name">SIP BDR</string>
     <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
+    <string name="username">Username</string>
     <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in">Sign in</string>
     <string name="action_sign_in_short">Sign in</string>
+    <string name="action_save">Simpan</string>
     <string name="welcome">"Welcome !"</string>
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
-    <string name="login_failed">"Login failed"</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="menu_1">Daftar Kelas</string>
+    <string name="menu_2">Pengajuan Lokasi</string>
+    <string name="menu_3">Akun</string>
+    <string name="app_long_name">Sistem Informasi Presensi BDR</string>
+    <string name="nip">NIP. %1$s</string>
+    <string name="content_desc">Logo Unand</string>
+    <string name="content_desc_2">Profile pic</string>
+    <string name="change_pass">Ganti Password</string>
+    <string name="loc_description">Detail Pengajuan Lokasi</string>
+    <string name="alamat">Alamat</string>
+    <string name="longitude">Longitude</string>
+    <string name="latitude">Latitude</string>
+    <string name="submission_status">Status</string>
+    <string name="btn_accept">Terima Pengajuan</string>
+    <string name="menu_item">Logout</string>
+    <string name="class_description">Detail Kelas</string>
+    <string name="sks">SKS</string>
+    <string name="day">Hari</string>
+    <string name="time">Jam</string>
+    <string name="classmeeting_description">Daftar Pertemuan</string>
+    <string name="lecturer">Dosen</string>
+    <string name="action_create_meeting">Tambah Pertemuan</string>
+    <string name="action_save_changes">Simpan Perubahan</string>
+    <string name="date">Tanggal Pertemuan</string>
+    <string name="start_time">Waktu Mulai</string>
+    <string name="finish_time">Waktu Selesai</string>
+    <string name="meeting_description">Detail Pertemuan</string>
+    <string name="presence_description">Daftar Hadir</string>
+    <string name="old_password">Password Lama</string>
+    <string name="new_password">Password Baru</string>
+    <string name="password_confirmation">Konfirmasi Password Baru</string>
+    <string name="no_location_submission">Tidak ada pengajuan lokasi mahasiswa</string>
+    <string name="no_classroom">Tidak ada kelas yang diampu</string>
+    <string name="loading">Loading...</string>
+    <string name="fab_label1">Edit Pertemuan</string>
+    <string name="fab_label2">Hapus Pertemuan</string>
+    <string-array name="meeting_number">
+        <item>1</item> <item>2</item> <item>3</item>
+        <item>4</item> <item>5</item> <item>6</item>
+        <item>7</item> <item>8</item> <item>9</item>
+        <item>10</item> <item>11</item> <item>12</item>
+        <item>13</item> <item>14</item> <item>15</item>
+        <item>16</item> <item>17</item> <item>18</item>
+        <item>19</item> <item>20</item> <item>21</item>
+        <item>22</item> <item>23</item> <item>24</item>
+        <item>25</item> <item>26</item> <item>27</item>
+        <item>28</item> <item>29</item> <item>30</item>
+    </string-array>
 </resources>
